--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/davebeyer/gv-logger.git"
+    "url": "git+https://github.com/groupvine/gv-logger.git"
   },
   "keywords": [
     "GroupVine",
@@ -19,9 +19,9 @@
   "author": "Dave Beyer",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/davebeyer/gv-logger/issues"
+    "url": "https://github.com/groupvine/gv-logger/issues"
   },
-  "homepage": "https://github.com/davebeyer/gv-logger#readme",
+  "homepage": "https://github.com/groupvine/gv-logger#readme",
   "dependencies": {
     "bunyan": "^1.8.12",
     "bunyan-debug-stream": "^2.0.0"
