--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "dependencies": {
     "bunyan": "^1.8.12",
     "bunyan-debug-stream": "^2.0.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.4.5"
   }
 }
