--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,9 @@
   "version": "3.1.6",
 
   "compilerOptions": {
-    "target": "es2015",
-    "module": "es2020",
+    "target": "es5",
+    "module": "commonjs",
     "lib": [ "dom", "es2015", "es2016", "es2017" ],
-    "moduleResolution": "node",
     "declaration": false,
     "noImplicitAny": false,
     "removeComments": false,
