--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc index.ts",
+    "build:dev": "tsc index.ts",
+    "build": "exit 0",
     "reinstall": "rm -rf node_modules && npm install"
   },
   "repository": {
