--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
   "homepage": "https://github.com/groupvine/gv-logger#readme",
   "dependencies": {
     "bunyan": "^1.8.15",
-    "bunyan-debug-stream": "^2.0.1",
+    "bunyan-debug-stream": "^3.1.0",
     "colors": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^3.4.5"
+    "@types/node": "^18.16.18",
+    "typescript": "~5.0.2"
   }
 }
